[package]
name = "my-sb-contracts"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
crypto-deposit-command = []
swap-operation = []


[dependencies]
my-telemetry = { branch = "0.2.1", git = "https://github.com/MyJetTools/my-telemetry.git" }
my-service-bus-shared = { branch = "0.2.3", git = "https://github.com/MyJetTools/my-service-bus-shared.git" }
my-service-bus-tcp-client = { branch = "0.1.5", git = "https://github.com/MyJetTools/my-service-bus-tcp-client.git" }
rust-extensions = { branch = "0.1.1", git = "https://github.com/MyJetTools/rust-extensions.git" }

prost = "*"
prost-types = "*"
tokio = { version = "*", features = ["full"] }
