[package]
name = "my-sb-contracts"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bid-ask = []
crypto-deposit-operation = []
crypto-deposit-command = []
swap-operation = []
balance-update = []
order-execution-operation = []
process-order-command = []

[dependencies]
my-telemetry = { tag = "0.2.2", git = "https://github.com/MyJetTools/my-telemetry.git" }

my-service-bus-shared = { tag = "0.2.4", git = "https://github.com/MyJetTools/my-service-bus-shared.git" }
my-service-bus-tcp-client = { tag = "0.1.7", git = "https://github.com/MyJetTools/my-service-bus-tcp-client.git" }
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }

my-logger = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }

prost = "*"
prost-types = "*"
tokio = { version = "*", features = ["full"] }
