[package]
name = "my-sb-contracts"
version = "0.2.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bid-ask = []
crypto-deposit-operation = []
crypto-deposit-command = []
swap-operation = []
balance-update = []
order-execution-operation = []
process-order-command = []
withdrawals = []
callback-log = []
fireblocks-rebalance-command = []


[dependencies]
service-sdk = { tag = "0.2.5", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "my-service-bus",
    "macros",
] }

serde = { version = "*", features = ["derive"] }

prost = "*"
prost-types = "*"
